fix(gux-list-item): item's text now wrap within its container

--- a/src/components/gux-list/list-item/gux-list-item.less
+++ b/src/components/gux-list/list-item/gux-list-item.less
@@ -3,11 +3,16 @@
 gux-list-item {
 
     .list-item {
-      height: 32px;
+      height: max-content;
+      word-wrap: break-word;
       line-height: 32px;
       padding: 0px 16px;
       display: flex;
       cursor: pointer;
+
+      gux-text-highlight {
+        width: 100%;
+      }
     }
 
     &[disabled] {
